publish/CycleCloud_Rafael/azuredeploy_Nested.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "Number of Worker Nodes":{
            "metadata": {
                "description": "The number of worker nodes in the SLURM cluster."
            },
            "type": "int",
            "defaultValue": 2,
            "minValue": 1
        },
        "Size of Worker Nodes": {
        "type": "string",
        "defaultValue": "4-CPUs,16GB-RAM",
        "allowedValues": [
            "2-CPUs,8GB-RAM",
            "4-CPUs,16GB-RAM",
            "8-CPUs,32GB-RAM",
            "16-CPUs,64GB-RAM",
            "V100-GPU,6-CPUs,112GB-RAM"
        ],
        "metadata": {
          "description": "Choose a size with or without a GPU for the worker nodes."
        }
      },
        "SSH Public Key": {
            "metadata": {
                "description": "The SSH public key to access the SLURM scheduler node."
            },
            "type": "string"
        }
    },
    "variables": {
        "computeApiVersion": "2019-03-01",
        "username": "hpcadmin",
        "password": "LoomeRockS12",
        "resourceLocation": "[resourceGroup().location]",
        "uniqueHash": "[substring(deployment().name, 22, 14)]",
        "cycleName": "[concat('cycleapp', take(variables('uniqueHash'),9), toLower(take(uniqueString(subscription().subscriptionId), 5)))]",
        "cycleNic": "[concat('nic', variables('cycleName'))]",
        "cycleNsgName": "[concat('nsg', variables('cycleName'))]",
        "cycleIPName": "[concat('ip', variables('cycleName'))]",
        "cycleSubnet": "cycle",
        "cyclecloudVmSize": "Standard_B4ms",
        "cyclecloudVmStorage": "Premium_LRS",
        "azureSovereignCloud": "public",
        "vnetName": "[concat('vnet', variables('cycleName'))]",
        "storageAccountName": "[concat('sto', variables('cycleName'))]",
        "FQDN": "[concat('cycle', variables('uniqueHash'))]",
        "WorkerSize": {
            "2-CPUs,8GB-RAM": "Standard_B2ms",
            "4-CPUs,16GB-RAM": "Standard_B4ms",
            "8-CPUs,32GB-RAM": "Standard_B8ms",
            "16-CPUs,64GB-RAM": "Standard_B16ms",
            "V100-GPU,6-CPUs,112GB-RAM": "Standard_NC6s_v3"
        },
        "workerVMSize": "[variables('WorkerSize')[parameters('Size of Worker Nodes')]]",
        "installScriptURL": "https://bizdataresearch.blob.core.windows.net/public/cyclecloud_app_server_install.py",
        "networkApiVersion": "2017-06-01",
        "contributor": "[concat('/subscriptions/', subscription().subscriptionId, '/providers/Microsoft.Authorization/roleDefinitions/', 'b24988ac-6180-42a0-ab88-20f7382dd24c')]",
        "nestedDeploymentName": "[concat('dep', variables('uniqueHash'))]" 
    },
    "outputs": {
        "fqdn": {
            "value": "[reference(variables('cycleIPName')).dnsSettings.fqdn]",
            "type": "string"
        },
        "ipaddress": {
            "value": "[reference(variables('cycleIPName')).ipAddress]",
            "type": "string"
        }
    },
    "resources": [
        {
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[variables('vnetName')]",
            "apiVersion": "[variables('networkApiVersion')]",
            "location": "[variables('resourceLocation')]",
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "10.0.0.0/20"
                    ]
                },
                "subnets": [
                    {
                        "name": "cycle",
                        "properties": {
                            "addressPrefix": "10.0.1.0/28"
                        }
                    },
                    {
                        "name": "user",
                        "properties": {
                            "addressPrefix": "10.0.3.0/24"
                        }
                    },
                    {
                        "name": "compute",
                        "properties": {
                            "addressPrefix": "10.0.4.0/22"
                        }
                    }
                ],
                "virtualNetworkPeerings": []
            },
            "dependsOn": []
        },        
        {
        "type": "Microsoft.Network/networkSecurityGroups",
        "name": "[variables('cycleNsgName')]",
        "apiVersion": "[variables('networkApiVersion')]",
        "location": "[variables('resourceLocation')]",
        "properties": {
            "securityRules": [
            {
                "name": "AllowSecuredCyclePortalInBound",
                "properties": {
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "443",
                "sourceAddressPrefix": "Internet",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 2000,
                "direction": "Inbound",
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
                }
            },
            {
                "name": "AllowCyclePortalInBound",
                "properties": {
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "80",
                "sourceAddressPrefix": "Internet",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 1000,
                "direction": "Inbound",
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
                }
            },
            {
                "name": "default-allow-ssh",
                "properties": {
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "22",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 3000,
                "direction": "Inbound",
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
                }
            }
            ]
        },
        "dependsOn": []
        },
        {
        "type": "Microsoft.Network/publicIPAddresses",
        "name": "[variables('cycleIPName')]",
        "apiVersion": "[variables('networkApiVersion')]",
        "location": "[variables('resourceLocation')]",
        "properties": {
            "publicIPAddressVersion": "IPv4",
            "publicIPAllocationMethod": "Static",
            "idleTimeoutInMinutes": 4,
            "dnsSettings": {
            "domainNameLabel": "[variables('FQDN')]"
            }
        },
        "dependsOn": []
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "[variables('networkApiVersion')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('cycleNsgName'))]",
                "[resourceId('Microsoft.Network/publicIPAddresses', variables('cycleIPName'))]"
            ],
            "location": "[variables('resourceLocation')]",
            "name": "[variables('cycleNic')]",
            "properties": {
                "dnsSettings": {},
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": false,
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "primary": true,
                            "privateIPAddressVersion": "IPv4",
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', variables('cycleIPName'))]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('vnetName'), variables('cycleSubnet'))]"
                            }
                        }
                    }
                ],
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('cycleNsgName'))]"
                },
                "primary": true
            }
        },
        {
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "[variables('computeApiVersion')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', variables('cycleNic'))]"
            ],
            "location": "[variables('resourceLocation')]",
            "name": "[variables('cycleName')]",
            "identity": {
                "type": "systemAssigned"
            },
            "properties": {
                "hardwareProfile": {
                    "vmSize": "[variables('cyclecloudVmSize')]"
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('cycleNic'))]"
                        }
                    ]
                },
                "osProfile": {
                    "adminUsername": "[variables('username')]",
                    "adminPassword": "[variables('password')]",
                    "computerName": "[variables('cycleName')]",
                    "linuxConfiguration": {
                        "disablePasswordAuthentication": false
                    },
                    "secrets": []
                },
                "storageProfile": {
                    "dataDisks": [
                        {
                            "caching": "ReadOnly",
                            "createOption": "Empty",
                            "diskSizeGB": 128,
                            "lun": 0,
                            "managedDisk": {
                                "storageAccountType": "[variables('cyclecloudVmStorage')]" 
                            }
                        }
                    ],
                    "imageReference": {
                        "offer": "0001-com-ubuntu-server-focal",
                        "publisher": "canonical",
                        "sku": "20_04-lts",
                        "version": "latest"
                    },
                    "osDisk": {
                        "caching": "ReadWrite",
                        "createOption": "FromImage",
                        "managedDisk": {
                            "storageAccountType": "[variables('cyclecloudVmStorage')]"
                        },
                        "osType": "Linux"
                    }
                }
            },
            "resources": [
                {
                    "type": "extensions",
                    "apiVersion": "2020-12-01",
                    "dependsOn": [
                        "[variables('cycleName')]"
                    ],
                    "location": "[resourceGroup().location]",
                    "name": "InstallCycle",
                    "properties": {
                        "publisher": "Microsoft.Azure.Extensions",
                        "type": "CustomScript",
                        "typeHandlerVersion": "2.1",
                        "autoUpgradeMinorVersion": true,
                        "protectedSettings": {
                            "commandToExecute": "[concat('sudo python3 cyclecloud_app_server_install.py ', '--acceptTerms', ' --useManagedIdentity', ' --azureSovereignCloud ', '\"', variables('azureSovereignCloud'), '\"', ' --username ', '\"', variables('username'), '\"', ' --password ', '''', base64(variables('password')), '''', ' --publickey ', '''', base64(parameters('SSH Public Key')), '''', ' --hostname ', '\"', reference(variables('cycleIPName')).dnsSettings.fqdn, '\"', ' --storageAccount  [...]
                            "fileUris": ["[variables('installScriptURL')]"]
                        }
                    }
                }
            ]
        },
        {
            "type": "Microsoft.Resources/deployments",
            "apiVersion": "2021-04-01",
            "name": "[variables('nestedDeploymentName')]",
            "subscriptionId": "[subscription().subscriptionId]",
            "location": "[resourceGroup().location]",
            "properties": {
                "mode": "Incremental",
                "template": {
                    "$schema": "https://schema.management.azure.com/schemas/2018-05-01/subscriptionDeploymentTemplate.json#",
                    "contentVersion": "1.0.0.0",
                    "resources": [
                        {
                            "type": "Microsoft.Authorization/roleAssignments",
                            "apiVersion": "2020-08-01-preview",
                            "name": "[guid(variables('uniqueHash'))]",
                            "properties": {
                                "roleDefinitionId": "[variables('contributor')]",
                                "principalId": "[reference(concat('Microsoft.Compute/virtualMachines/', variables('cycleName')), '2017-03-30', 'Full').identity.principalId]",
                                "principalType": "ServicePrincipal"
                            }
                        }
                    ]
                }
            }
        }
    ]
}
